--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-password = "tejv lmux lckz iisx"
-sender_email = "ruquiyaanjum23@gmail.com"
-receiver_email = "anjumruquiya999@gmail.com"
+password = ""
+sender_email = ""
+receiver_email = ""
 
